# helixdesk-ai

./: .env.example  .gitignore  README.md  README.zh-CN.md
apps/control-api/: README.md  pyproject.toml
apps/control-api/ai_customer_platform_control_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/control-api/app/: main.py
apps/control-api/app/api/admin/: routes.py
apps/control-api/app/api/runtime/: routes.py
apps/control-api/app/core/: config.py  scheduler.py  security.py  serialization.py
apps/control-api/app/db/: bootstrap.py  models.py  session.py
apps/control-api/app/models/: domain.py
apps/control-api/app/schemas/: admin.py  runtime.py
apps/control-api/app/services/: astrbot_service.py  audit_service.py  chatwoot_service.py  handover_service.py  health_service.py  preset_service.py  routing_service.py  settings_service.py
apps/control-api/tests/: test_smoke.py
deploy/compose/: docker-compose.yml
deploy/docker/: control-api.Dockerfile
docs/: quick-start.zh-CN.md  roadmap.zh-CN.md
docs/screenshots/: README.md  README.zh-CN.md
scripts/: dev.ps1
