[project]
name = "ai-customer-platform-control-api"
version = "0.1.0"
description = "Control API for Chatwoot and AstrBot unified customer platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
